<resources>
    <string name="app_name">EmployeeLog</string>
    <string name="title_activity_user_dash_board">UserDashBoardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="StringPlaceHolderUseremail">nameexample@email.com</string>
    <string name="StringResSignIn">Sign In</string>
    <string name="StringResSignUp">Sign Up</string>
    <string name="stringResPassword">Enter Password</string>
    <string name="stringResPasswordRepeat">Re-enter Password</string>
    <string name="stringSignUPifNot">Not yet signed up?</string>
    <string name="stringLoginIfRegistered">Have account?</string>
    <string name="StringCbxResAgreeTerms">Agree To Terms</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="StringTVResendVerEmail">Resend Verification Email</string>
    <string name="action_signout">Sign Out</string>
</resources>