<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".LoginActivity">

        <ImageView
            android:id="@+id/imvAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <EditText
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/StringPlaceHolderUseremail"
            app:layout_constraintEnd_toEndOf="@+id/imvAvatar"
            app:layout_constraintStart_toStartOf="@+id/imvAvatar"
            tools:layout_editor_absoluteY="209dp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/stringResPassword"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            tools:layout_editor_absoluteY="269dp" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/stringResPasswordRepeat"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
            tools:layout_editor_absoluteY="346dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StringResSignUp"
            app:layout_constraintEnd_toEndOf="@+id/cbxAgreeTerms"
            app:layout_constraintStart_toStartOf="@+id/cbxAgreeTerms"
            tools:layout_editor_absoluteY="500dp" />

        <CheckBox
            android:id="@+id/cbxAgreeTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StringCbxResAgreeTerms"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword2"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword2"
            tools:layout_editor_absoluteY="433dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringLoginIfRegistered"
            app:layout_constraintEnd_toEndOf="@+id/button"
            app:layout_constraintStart_toStartOf="@+id/button"
            tools:layout_editor_absoluteY="577dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.529" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>