<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.414"
        tools:layout_editor_absoluteX="193dp" />

    <ImageView
        android:id="@+id/imvAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="153dp"
        tools:src="@tools:sample/avatars" />

    <EditText
        android:id="@+id/edtUserEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/StringPlaceHolderUseremail"
        app:layout_constraintEnd_toEndOf="@+id/imvAvatar"
        app:layout_constraintStart_toStartOf="@+id/imvAvatar"
        tools:layout_editor_absoluteY="209dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringSignUPifNot"
        app:layout_constraintEnd_toEndOf="@+id/buSignIn"
        app:layout_constraintStart_toStartOf="@+id/buSignIn"
        tools:layout_editor_absoluteY="482dp" />

    <EditText
        android:id="@+id/edtUserPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/stringResPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edtUserEmailAddress"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edtUserEmailAddress"
        tools:layout_editor_absoluteY="343dp" />

    <Button
        android:id="@+id/buSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StringResSignIn"
        app:layout_constraintEnd_toEndOf="@+id/edtUserPassword"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@+id/edtUserPassword"
        tools:layout_editor_absoluteY="405dp" />

</androidx.constraintlayout.widget.ConstraintLayout>